    + Add new local cdbs tweak upstream.tarball.mk to add a
      get-orig-source target and more.
    + Replace auto-update.mk with overloading buildcore.mk.
    + Emit list of suspects if new copyrights are found.
    + Check for copyrights at pre-build (at clean we might run before
      actual cleanup has finished).
    + document the tweaks in debian/README.cdbs-tweaks.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 05 May 2007 20:32:28 +0200

icecast2 (2.3.1-5) unstable; urgency=low

  * Add patch to syncronize with upstream SVN as of 20060620 (r11419).
    Reasoning: No new upstream release for quite some time, and changes
    in SVN seems to only be small tightenings, not new risky features.
    + Safer use of ICECAST_VERSION_STRING.
    + Fix (void) function prototypes.
    + Fix various leaks.
    + Fail on unrecognized codec, dropping source instead of looping.
    + Improved slave handling.
    + Prevent races by locking when modifying content.
    + Fix possible bad pointer dereference when processing new clients.
    + Consistently use compat.h (and drop os.h).
  * Enable cdbs update of automake, as the above change Makefile.am's.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 19 Aug 2006 21:57:36 +0200

icecast2 (2.3.1-4) unstable; urgency=low

  * Acknowledge NMU. Closes: bug#375253, #373855, #373818.
  * Build-depend on libtheora-dev again (but at least alpha7), as later
    suggested in the above bug#375253. Closes: bug#308939.
  * Bump standards-version to 3.7.2 (no changes needed).
  * Enable cdbs relibtoolization, fixing linkage problem causing FTBFS.
    Closes: bug#346507 (thanks to "J.H.M. Dassen (Ray)"
    <fsmla@xinara.org>).
  * Add patch to avoid autotools messing with debian subdir.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 19 Aug 2006 20:11:00 +0200

icecast2 (2.3.1-3.1) unstable; urgency=high

  * Non-maintainer upload.
  * Disable Theora support (by removing Depends and Build-Depends on