@@ -3,7 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: Debian Icecast team <pkg-icecast-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>
-Build-Depends: cdbs (>= 0.4.23-1.1), autotools-dev, debhelper (>= 4.2.0), libtool, automake1.7, autoconf, quilt, patchutils (>= 0.2.25), cdbs (>= 0.4.27-1), dh-buildinfo, libogg-dev (>> 1.0.0), libvorbis-dev (>> 1.0.0), libxslt-dev, libxml2-dev, libcurl3-gnutls-dev, libtheora-dev (>= 0.0.0.alpha7), libspeex-dev
+Build-Depends: cdbs (>= 0.4.27-1), autotools-dev, quilt, patchutils (>= 0.2.25), libtool, automake1.10, autoconf, dh-buildinfo, debhelper (>= 4.2.0), libogg-dev (>> 1.0.0), libvorbis-dev (>> 1.0.0), libxslt-dev, libxml2-dev, libcurl3-gnutls-dev, libtheora-dev (>= 0.0.0.alpha7), libspeex-dev
 Standards-Version: 3.7.2
 
 Package: icecast2
