@@ -3,7 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: Debian Icecast team <pkg-icecast-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>
-Build-Depends: @cdbs@, libogg-dev (>> 1.0.0), libvorbis-dev (>> 1.0.0), libxslt-dev, libxml2-dev, libcurl3-gnutls-dev, libtheora-dev (>= 0.0.0.alpha7), libspeex-dev
+Build-Depends: @cdbs@
 Standards-Version: 3.7.2
 
 Package: icecast2
