@@ -3,8 +3,8 @@
 # Copyright © 2004-2007 Jonas Smedegaard <dr@jones.dk>
 
 DEB_AUTO_UPDATE_LIBTOOL = pre
-DEB_AUTO_UPDATE_ACLOCAL = 1.7
-DEB_AUTO_UPDATE_AUTOMAKE = 1.7
+DEB_AUTO_UPDATE_ACLOCAL = 1.10
+DEB_AUTO_UPDATE_AUTOMAKE = 1.10
 DEB_AUTO_UPDATE_AUTOCONF = 2.60
 
 # See debian/README.cdbs-tweaks for info on local overrides
@@ -37,3 +37,10 @@ common-binary-post-install-arch::
 		mv $(DEB_DESTDIR)/usr/share/$$file $(DEB_DESTDIR)/etc/$$file; \
 		ln -s /etc/$$file $(DEB_DESTDIR)/usr/share/$$file; \
 	done
+
+# Upstream requirements
+#  Icecast is GPL so needs gnutls variant of CURL
+CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), libogg-dev (>> 1.0.0), libvorbis-dev (>> 1.0.0), libxslt-dev, libxml2-dev, libcurl3-gnutls-dev, libtheora-dev (>= 0.0.0.alpha7), libspeex-dev
+
+# Cleanup duplicate dependencies to please lintian and ftp-masters
+CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed 's/cdbs (>= 0.4.23-1.1) *, *\(.*\), *cdbs (>= 0.4.27-1)/cdbs (>= 0.4.27-1), \1/')
